- Implemented /shout command and associated settings
- Tweaks to enemy influence system.
- Ingame menu and console now are drawn on top of a semi-transparent,
  darkened area for increased readability.
- New first start menu with clearer language selection and initial setup.
- Tutorial match against one AI at slower speed.
- Tutorial tooltips for the most important keybindings.

Changes since 0.2.8.3_rc4:
- Intercepted chat commands are now written to ladderlog.txt. Format:
  COMMAND /command-intercepted player [command arguments]
- Increased default speed of server pinging
- Reordered game menus a bit
- fast finish works again

Changes since 0.2.8.3_rc3:
- Pinging previously popular servers earlier for quicker server
  browsing
- Improved master server random polling, the second polled master now
  also is random, and all masters are polled if need be
- Custom camera snaps to cycle direction once when activated if the turn speed
  is zero.
- RESERVE_SCREEN_NAME now works regardless of the ALLOW_IMPOSTOR setting.
- USER_LEVEL now escapes the given authenticated name so you don't have to
  guess the escaping rules. Ex: USER_LEVEL "name with spaces@forums" 2
  changes user level for name\_with\_spaces@forums

Changes since 0.2.8.3_rc2:
- Fixed crash with server polling
- ROUND_WINNER and MATCH_WINNER logged to ladderlog
- Camera switches to user preferred camera when you die in incam mode
- Better support for custom language files
- Players can no longer spam chat with /shuffle messages. Added new setting
  SHUFFLE_SPAM_MESSAGES_PER_ROUND, a per round, per player limit on the number
  of shuffle messages displayed.

Changes since 0.2.8.3_rc1:
- Fixed dark color filters, such as FILTER_DARK_COLOR_STRINGS, to not filter
  the reset color.
- ASE moviepack models no longer have a vertex count limit
- Fixed endless recursion crash between rounds

Changes since 0.2.8.3_beta3:
- Chat prefix spam protection. Guards against prefix spam, such as when a